--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -13,6 +13,11 @@ pipeline {
         disableConcurrentBuilds()
         timestamps()
     }
+    environment {
+        dns1 = "192.168.106.10"
+        dns2 = "192.168.106.12"
+        vm_display="False"
+    }
 
     stages {
         stage ('Verify Parameters') {
@@ -22,6 +27,9 @@ pipeline {
                 echo "Git Branch is ${GIT_BRANCH}"
                 echo "Git Commit is ${GIT_COMMIT}"
                 echo "Git URL    is ${GIT_URL}"
+                echo "DNS1 Addr  is ${dn1}"
+                echo "DNS2 Addr  is ${dn2}"
+                echo "VM Display is ${vm_display}"
             }
         }
     }
