--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -27,10 +27,9 @@ pipeline {
                 echo "Git Branch is ${GIT_BRANCH}"
                 echo "Git Commit is ${GIT_COMMIT}"
                 echo "Git URL    is ${GIT_URL}"
-                sh 'printenv | grep dns'
-                echo "DNS1 Addr  is ${dn1}"
-                //echo "DNS2 Addr  is ${dn2}"
-                //echo "VM Display is ${vm_display}"
+                echo "DNS1 Addr  is ${dns1}"
+                echo "DNS2 Addr  is ${dns2}"
+                echo "VM Display is ${vm_display}"
             }
         }
     }
