--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -41,9 +41,7 @@ pipeline {
     }
     post {
         always {
-            dir ('tmp') {
-                deleteDir()
-            }
+            sh "sudo rm -Rf ${WORKSPACE}/tmp"
         }
     }
 }
