--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -49,7 +49,7 @@ pipeline {
             steps {
                 dir ('tmp') {
                     timeout(time: 2, unit: 'MINUTES') {
-                        sh "sudo sak4ci install-vm --clone-template True  --snapshot yes --start-vm True --vm-display ${vm_display} --nf-type mme --job-name ${JOB_NAME} --template-domain ${mme_vm_template} --build-id ${BUILD_NUMBER} --dns1 ${dn1} --dns2 ${dns2}"
+                        sh "sudo sak4ci install-vm --clone-template True  --snapshot yes --start-vm True --vm-display ${vm_display} --nf-type mme --job-name ${JOB_NAME} --template-domain ${mme_vm_template} --build-id ${BUILD_NUMBER} --dns1 ${dns1} --dns2 ${dns2}"
                     }
                 }
             }
