--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -103,14 +103,14 @@ pipeline {
                 stage ('Build MME') {
                     steps {
                         dir ('tmp') {
-                            sh "sudo sak4ci build-nf --nf-type mme --keep-vm-alive True --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
+                            sh "sudo sak4ci build-nf --nf-type mme --keep-vm-alive True --build-type Release --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
                         }
                     }
                 }
                 stage ('Build HSS') {
                     steps {
                         dir ('tmp') {
-                            sh "sudo sak4ci build-nf --nf-type hss --keep-vm-alive True --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
+                            sh "sudo sak4ci build-nf --nf-type hss --keep-vm-alive True --build-type Release --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
                         }
                     }
                 }
