--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -10,6 +10,7 @@ pipeline {
     options {
         disableConcurrentBuilds()
         timestamps()
+        ansiColor('xterm')
     }
     environment {
         dns1 = "192.168.106.10"
@@ -93,8 +94,7 @@ pipeline {
                     steps {
                         dir ('tmp') {
                             timeout(time: 25, unit: 'MINUTES') {
-                                //sh "sudo sak4ci install-libs-packs4nf --nf-type spgw --keep-vm-alive True --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
-                                echo "Bypassing SPGW Install due to errors"
+                                sh "sudo sak4ci install-libs-packs4nf --nf-type spgw --keep-vm-alive True --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
                             }
                         }
                     }
@@ -120,8 +120,7 @@ pipeline {
                 stage ('Build SPGW') {
                     steps {
                         dir ('tmp') {
-                            //sh "sudo sak4ci build-nf --nf-type spgw --keep-vm-alive True --build-type Release --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
-                            echo "Bypassing SPGW Build for the moment"
+                            sh "sudo sak4ci build-nf --nf-type spgw --keep-vm-alive True --build-type Release --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
                         }
                     }
                 }
@@ -139,16 +138,14 @@ pipeline {
                 stage ('Config HSS') {
                     steps {
                         dir ('tmp') {
-                            //sh "sudo sak4ci nf-configure --nf-type hss --keep-vm-alive True --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
-                            echo "Bypassing HSS configuration for the moment"
+                            sh "sudo sak4ci nf-configure --nf-type hss --keep-vm-alive True --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
                         }
                     }
                 }
                 stage ('Config SPGW') {
                     steps {
                         dir ('tmp') {
-                            //sh "sudo sak4ci nf-configure --nf-type spgw --keep-vm-alive True --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
-                            echo "Bypassing SPGW configuration for the moment"
+                            sh "sudo sak4ci nf-configure --nf-type spgw --keep-vm-alive True --job-name ${JOB_NAME} --build-id ${BUILD_NUMBER}"
                         }
                     }
                 }
