CI: pipeline script fix
Signed-off-by: Raphael Defosseux <raphael.defosseux@openairinterface.org>

--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -97,8 +97,10 @@ pipeline {
             steps {
                 echo '\u2705 \u001B[32mStatic Code Analysis with cppcheck\u001B[0m'
                 sh "cppcheck --enable=warning --force --xml --xml-version=2 . 2> cppcheck.xml 1> cppcheck_build.log"
-                if (fileExists('cppcheck.xml')) {
-                    archiveArtifacts artifacts: 'cppcheck.xml'
+                script {
+                    if (fileExists('cppcheck.xml')) {
+                        archiveArtifacts artifacts: 'cppcheck.xml'
+                    }
                 }
             }
         }
